CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Crypto)
SET(CMAKE_BUILD_TYPE Release)
SET(PROJECT_SOURCE_DIR src)
INCLUDE_DIRECTORIES(BEFORE ${PROJECT_SOURCE_DIR}/lib)
ADD_EXECUTABLE(rsa src/rsa.cpp src/rsa.h src/main.cpp)
#ADD_EXECUTABLE(harris-corner-detector src/corner_detector.cpp)
#TARGET_LINK_LIBRARIES(blur ${OpenCV_LIBS})
#TARGET_LINK_LIBRARIES(harris-corner-detector ${OpenCV_LIBS}) 
#configure_file(checkerboard.png checkerboard.png COPYONLY)
#configure_file(notredame.png notredame.png COPYONLY)
